# CrosstonesV4

./: .gitignore  BoardState.cpp  BoardState.h  CMakeLists.txt  CMakeUserPresets.json  CrosstonesV4.sln  CrosstonesV4.vcxproj  CrosstonesV4.vcxproj.filters  DCTestSuite.cpp  DCTestSuite.h  GameMaster.cpp  GameMaster.h  Main.cpp  ManualPlayer.cpp  ManualPlayer.h  NewUI.h  Piece.h  README.md  UI.cpp  UI.h  resource.h  saved_games.txt  vcpkg.json
Felix Bots/: Board.cpp  Board.h  DCUtils.cpp  DCUtils.h  DC_Eval_Config.json  DebugPrinting.cpp  Deepchad.cpp  Deepchad.h  Evaluation.cpp  Evaluation.h  Felix Bots.vcxproj  Felix Bots.vcxproj.filters  MoveGenerator.cpp  MoveGenerator.h  MoveOrdering.cpp  MoveOrdering.h  PosMap_Normal.txt  Searcher.cpp  Searcher.h  TranspositionTable.h  Utility.cpp  Utility.h  Zobrist.cpp  Zobrist.h
Globals/: Globals.vcxproj  Globals.vcxproj.filters  Piece.cpp  Piece.h  Player.h
Test Bots/: BasicGenerator.cpp  BasicGenerator.h  Test Bots.vcxproj  TestBotRnd.cpp  TestBotRnd.h
Test Suite/: Main.cpp  StateTester.cpp  StateTester.h  Test Suite.vcxproj
Trix Bots/: AlphaCruncher.cpp  AlphaCruncher.h  DemoKnight.cpp  DemoKnight.h  FastMoveGenerator.cpp  FastMoveGenerator.h  GeneratorComparer.cpp  GeneratorComparer.h  Hydra.cpp  Hydra.h  MCTS.cpp  MCTS.h  MCTS_Structs.h  TheFirst.cpp  TheFirst.h  Toggles.h  TranspositionTable.cpp  TranspositionTable.h  Trix Bots.vcxproj  Trix Bots.vcxproj.filters  TrixBoardState.cpp  TrixBoardState.h  Utils.cpp  Utils.h
resources/: openings.txt  presets.txt
src/: Main.cpp
src/app/: AllApps.cpp  App.h  AppHost.cpp  AppHost.h  AppRegistry.h  BoardDraw.h  Config.cpp  Config.h  DCTestApp.cpp  DCTestApp.h  ExploreMode.cpp  ExploreMode.h  FontManager.h  GameApp.cpp  GameApp.h  GameMode.cpp  GameMode.h  GameViewerApp.cpp  GameViewerApp.h  LauncherMenu.cpp  LauncherMenu.h  MoveExplorerApp.cpp  MoveExplorerApp.h  README.md  SettingsApp.cpp  SettingsApp.h  StackThread.h  StubApp.h  TestMode.cpp  TestMode.h  TrixTestApp.cpp  TrixTestApp.h  ViewerMode.cpp  ViewerMode.h
src/app/core/: move_tree.cpp  move_tree.h
src/app/features/: analysis_stub.cpp  analysis_stub.h  opening_explorer.cpp  opening_explorer.h
src/app/persistence/: GameEntries.cpp  GameEntries.h  GameSetupConfig.cpp  GameSetupConfig.h  Openings.cpp  Openings.h  PositionPresets.cpp  PositionPresets.h
src/app/services/: player_factory.cpp  player_factory.h
src/app/ui/: layout.cpp  layout.h  overlay.cpp  overlay.h  popup.h  scale.h  theme.cpp  theme.h
src/app/ui/components/: board.cpp  board.h  button.cpp  button.h  dropdown.cpp  dropdown.h  int_field.cpp  int_field.h  move_history.cpp  move_history.h  move_list.cpp  move_list.h  panel.cpp  panel.h  radio_group.cpp  radio_group.h  scroll_area.cpp  scroll_area.h  sidebar.cpp  sidebar.h  stepper.cpp  stepper.h
src/archive/: BoardDraw.h  Main_old.cpp  UI_old.h
src/data/: GameEntries.cpp  GameEntries.h  KsnMove.h  LoadedPosition.h  MoveInfo.h  PathStep.h  XMove.h
src/felix-bots/: Board.h  BotBoard.cpp  BotBoard.h  DebugPrinting.cpp  Deepchad.cpp  Deepchad.h  Evaluation.cpp  Evaluation.h  Evaluation.hpp  Felix Bots.vcxproj  Felix Bots.vcxproj.filters  MoveGenerator.cpp  MoveGenerator.h  MoveOrdering.cpp  MoveOrdering.h  Searcher.cpp  Searcher.h  TranspositionTable.h  Utility.cpp  Utility.h  Zobrist.cpp  Zobrist.h
src/felix-bots/board/: BotBoard.cpp  BotBoard.h  GameResult.h  Zobrist.cpp  Zobrist.h
src/felix-bots/evaluation/: Evaluation.cpp
src/felix-bots/move-gen/: MoveGenerator.cpp  MoveGenerator.h
src/felix-bots/move-gen-verification/: BoardState.h  MoveGenVerifier.h
src/felix-bots/search/: MoveOrdering.cpp  MoveOrdering.h  Searcher.cpp  Searcher.h  TranspositionTable.h
src/felix-bots/util/: DebugPrinting.cpp  Utility.cpp  Utility.h
src/game-suite/: Board.cpp  Board.h  BoardState.cpp  BoardState.h  DCTestSuite.cpp  DCTestSuite.h  GameMaster.cpp  GameMaster.h  GamePosition.h  KsnFormatter.cpp  KsnFormatter.h  Main.cpp  ManualPlayer.cpp  ManualPlayer.h  NewUI.h  RichMoveGenerator.cpp  RichMoveGenerator.h  UI.cpp  fix_win32_compatibility.h
src/globals/: GameMode.cpp  GameMode.h  Globals.vcxproj  Piece.h  Player.h  PlayerInputKey.h
src/test-bots/: BasicGenerator.cpp  BasicGenerator.h  Test Bots.vcxproj  Test Bots.vcxproj.filters  TestBotRnd.cpp  TestBotRnd.h
src/test-suite/: Main.cpp  StateTester.cpp  StateTester.h  Test Suite.vcxproj  Test Suite.vcxproj.filters
src/tests/: KsnTester.cpp  KsnTester.h  MoveGenTester.cpp  MoveGenTester.h  OpeningsVerifyTester.cpp  OpeningsVerifyTester.h  StateTester.cpp  StateTester.h  TestBase.h  TestRunner.cpp  TestRunner.h
src/trix-bots/: AlphaCruncher.h  DemoKnight.h  FastMoveGenerator.h  GeneratorComparer.cpp  GeneratorComparer.h  Hydra.cpp  Hydra.h  MCTS.h  TheFirst.cpp  TheFirst.h  TranspositionTable.cpp  Trix Bots.vcxproj  Trix Bots.vcxproj.filters  TrixBoardState.cpp  TrixBoardState.h  Utils.cpp  Utils.h
src/trix-bots/bot-code/: AlphaCruncher.cpp  AlphaCruncher.h  DemoKnight.cpp  DemoKnight.h  Hydra.cpp  Hydra.h  TheFirst.cpp  TheFirst.h
src/trix-bots/bot-code/damp-sock/: AlphaBeta.cpp  AlphaBeta.h  DampSock.cpp  DampSock.h  DampSockStructs.h  Evaluation.cpp  Evaluation.h
src/trix-bots/mcts/: MCTS.h
src/trix-bots/utils/: FastMoveGenerator.cpp  FastMoveGenerator.h  GeneratorComparer.cpp  GeneratorComparer.h  TrixBoardState.cpp  TrixBoardState.h  Utils.cpp  Utils.h
